<resources>
    <string name="app_name">Aula-02</string>
    <string name="img_user">Foto do Usuário</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_create_account">Não tem cadastro?</string>
    <string name="label_nome">Nome</string>
    <string name="label_email2">Email</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_senha2">Senha</string>
    <string name="label_confsenha">Confirmar senha</string>
    <string name="btn_salvar">Salvar</string>
</resources>
